@@ -4,9 +4,9 @@
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
  * You may obtain a copy of the License at
- * 
+ *
  *      http://www.apache.org/licenses/LICENSE-2.0
- * 
+ *
  * Unless required by applicable law or agreed to in writing, software
  * distributed under the License is distributed on an "AS IS" BASIS,
  * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
@@ -16,8 +16,7 @@
 package ghidra.features.bsim.query.facade;
 
 import java.io.InputStream;
-import java.net.MalformedURLException;
-import java.net.URL;
+import java.net.*;
 
 import generic.jar.ResourceFile;
 import generic.lsh.vector.LSHVectorFactory;
@@ -107,11 +106,6 @@ public class FunctionDatabaseTestDouble implements SQLFunctionDatabase {
 	}
 
 	@Override
-	public void setUserName(String userName) {
-		// Currently not implemented
-	}
-
-	@Override
 	public String getURLString() {
 		return urlString;
 	}
@@ -119,9 +113,9 @@ public class FunctionDatabaseTestDouble implements SQLFunctionDatabase {
 	@Override
 	public BSimServerInfo getServerInfo() {
 		try {
-			return new BSimServerInfo(new URL(urlString));
+			return new BSimServerInfo(new URI(urlString).toURL());
 		}
-		catch (IllegalArgumentException | MalformedURLException e) {
+		catch (IllegalArgumentException | MalformedURLException | URISyntaxException e) {
 			throw new RuntimeException(e);
 		}
 	}
@@ -141,8 +135,8 @@ public class FunctionDatabaseTestDouble implements SQLFunctionDatabase {
 	}
 
 	@Override
-	public Error getLastError() {
-		return new Error(ErrorCategory.Unused, errorString);
+	public BSimError getLastError() {
+		return new BSimError(ErrorCategory.Unused, errorString);
 	}
 
 	void setErrorString(String errorString) {
