@@ -4,9 +4,9 @@
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
  * You may obtain a copy of the License at
- * 
+ *
  *      http://www.apache.org/licenses/LICENSE-2.0
- * 
+ *
  * Unless required by applicable law or agreed to in writing, software
  * distributed under the License is distributed on an "AS IS" BASIS,
  * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
@@ -16,32 +16,38 @@
 package ghidra.plugin.importer;
 
 import java.awt.Window;
-import java.io.Closeable;
 import java.io.IOException;
 import java.util.*;
 
 import docking.widgets.OptionDialog;
+import docking.widgets.filechooser.GhidraFileChooser;
+import ghidra.app.events.ProgramAddedToPluginEvent;
 import ghidra.app.plugin.core.help.AboutDomainObjectUtils;
 import ghidra.app.services.FileSystemBrowserService;
 import ghidra.app.services.ProgramManager;
-import ghidra.app.util.GenericHelpTopics;
-import ghidra.app.util.Option;
+import ghidra.app.util.*;
 import ghidra.app.util.bin.ByteProvider;
+import ghidra.app.util.bin.FileBytesProvider;
 import ghidra.app.util.importer.MessageLog;
 import ghidra.app.util.opinion.*;
+import ghidra.app.util.opinion.Loader.ImporterSettings;
 import ghidra.formats.gfilesystem.*;
+import ghidra.formats.gfilesystem.factory.FileSystemFactoryMgr;
 import ghidra.framework.main.AppInfo;
 import ghidra.framework.main.FrontEndTool;
 import ghidra.framework.model.*;
 import ghidra.framework.plugintool.PluginTool;
 import ghidra.plugins.importer.batch.BatchImportDialog;
+import ghidra.program.database.mem.FileBytes;
+import ghidra.program.model.address.AddressFactory;
 import ghidra.program.model.lang.LanguageCompilerSpecPair;
+import ghidra.program.model.lang.LanguageNotFoundException;
 import ghidra.program.model.listing.Program;
 import ghidra.program.util.DefaultLanguageService;
 import ghidra.util.*;
 import ghidra.util.exception.CancelledException;
+import ghidra.util.exception.CryptoException;
 import ghidra.util.filechooser.ExtensionFileFilter;
-import ghidra.util.filechooser.GhidraFileFilter;
 import ghidra.util.task.TaskLauncher;
 import ghidra.util.task.TaskMonitor;
 import util.CollectionUtils;
@@ -55,23 +61,44 @@ import util.CollectionUtils;
 public class ImporterUtilities {
 
 	/**
-	 * File extension filter for well known 'loadable' files for GhidraFileChoosers.
-	 *
-	 * TODO: will be refactored to use file_extension_icon.xml file info.
+	 * Adds file filters for associated {@link Loader} file extensions to the given 
+	 * {@link GhidraFileChooser}
+	 * 
+	 * @param chooser The {@link GhidraFileChooser} to add extension file filters to
 	 */
-	public static final GhidraFileFilter LOADABLE_FILES_FILTER = ExtensionFileFilter.forExtensions(
-		"Loadable files", "exe", "dll", "obj", "drv", "bin", "hex", "o", "a", "so", "class", "lib");
+	public static void addLoadableFileFilters(GhidraFileChooser chooser) {
+		Set<String> all = new HashSet<>();
+		for (Loader loader : LoaderService.getAllLoaders()) {
+			Collection<String> exts = loader.getAssociatedFileExtensions();
+			if (!exts.isEmpty()) {
+				chooser.addFileFilter(new ExtensionFileFilter(exts, loader.getName()));
+				all.addAll(exts);
+			}
+		}
+		if (!all.isEmpty()) {
+			chooser.addFileFilter(new ExtensionFileFilter(all, "Loadable files"));
+		}
+	}
 
 	/**
-	 * File extension filter for well known 'container' files for GhidraFileChoosers.
-	 *
-	 * TODO: will be refactored to use file_extension_icon.xml file info.
+	 * Adds file filters for associated {@link GFileSystem} file extensions to the given 
+	 * {@link GhidraFileChooser}
+	 * 
+	 * @param chooser The {@link GhidraFileChooser} to add extension file filters to
 	 */
-	public static final GhidraFileFilter CONTAINER_FILES_FILTER =
-		ExtensionFileFilter.forExtensions("Container files", "zip", "tar", "tgz", "jar", "gz",
-			"ipsw", "img3", "dmg", "apk", "cpio", "rpm", "lib");
-
-	private static final FileSystemService fsService = FileSystemService.getInstance();
+	public static void addFileSystemFileFilters(GhidraFileChooser chooser) {
+		Set<String> all = new HashSet<>();
+		FileSystemFactoryMgr mgr = FileSystemFactoryMgr.getInstance();
+		mgr.getFilesystemExtensionsByDescription().forEach((description, exts) -> {
+			if (exts.length > 0) {
+				chooser.addFileFilter(new ExtensionFileFilter(exts, description));
+				Collections.addAll(all, exts);
+			}
+		});
+		if (!all.isEmpty()) {
+			chooser.addFileFilter(new ExtensionFileFilter(all, "Container files"));
+		}
+	}
 
 	static List<LanguageCompilerSpecPair> getPairs(Collection<LoadSpec> loadSpecs) {
 		Set<LanguageCompilerSpecPair> pairs = new HashSet<>();
@@ -131,34 +158,32 @@ public class ImporterUtilities {
 
 		Objects.requireNonNull(monitor);
 
-		RefdFile referencedFile = null;
-		try {
-			referencedFile = fsService.getRefdFile(fsrl, monitor);
+		FileSystemService fsService = FileSystemService.getInstance();
 
-			FSRL fullFsrl = fsService.getFullyQualifiedFSRL(fsrl, monitor);
-			boolean isFSContainer = fsService.isFileFilesystemContainer(fullFsrl, monitor);
-			if (referencedFile.file.getLength() == 0) {
-				Msg.showError(ImporterUtilities.class, null, "File is empty",
-					"File " + fsrl.getPath() + " is empty, nothing to import");
+		try (RefdFile referencedFile = fsService.getRefdFile(fsrl, monitor)) {
+			if (!ensureFileImportable(referencedFile, monitor)) {
 				return;
 			}
 
+			FSRL fullFsrl = fsService.getFullyQualifiedFSRL(fsrl, monitor);
 			GFileSystem fs = referencedFile.fsRef.getFilesystem();
 			if (fs instanceof GFileSystemProgramProvider) {
 				doFsImport(referencedFile, fullFsrl, destinationFolder, programManager, tool);
 				return;
 			}
 
-			if (!isFSContainer) {
+			if (fsService.isFileFilesystemContainer(fullFsrl, monitor)) {
+				// file is a container, ask user to pick single import, batch import or fs browser
+				importFromContainer(tool, programManager, destinationFolder, suggestedPath, monitor,
+					referencedFile, fullFsrl);
+			}
+			else {
 				// normal file; do a single-file import
-				importSingleFile(fullFsrl, destinationFolder, suggestedPath, tool, programManager,
-					monitor);
+				showImportSingleFileDialog(fullFsrl, destinationFolder, suggestedPath, tool,
+					programManager, monitor);
 				return;
 			}
 
-			// file is a container, ask user to pick single import, batch import or fs browser
-			importFromContainer(tool, programManager, destinationFolder, suggestedPath, monitor,
-				referencedFile, fullFsrl);
 		}
 		catch (IOException ioe) {
 			String message = ioe.getMessage();
@@ -167,20 +192,6 @@ public class ImporterUtilities {
 		}
 		catch (CancelledException e) {
 			Msg.info(ImporterUtilities.class, "Show Import Dialog canceled");
-		}
-		finally {
-			close(referencedFile);
-		}
-	}
-
-	private static void close(Closeable c) {
-		if (c != null) {
-			try {
-				c.close();
-			}
-			catch (IOException e) {
-				// ignore
-			}
 		}
 	}
 
@@ -213,11 +224,11 @@ public class ImporterUtilities {
 		}
 
 		if (choice == 1) {
-			importSingleFile(fullFsrl, destinationFolder, suggestedPath, tool, programManager,
-				monitor);
+			showImportSingleFileDialog(fullFsrl, destinationFolder, suggestedPath, tool,
+				programManager, monitor);
 		}
 		else if (choice == 2) {
-			BatchImportDialog.showAndImport(tool, null, Arrays.asList(fullFsrl), destinationFolder,
+			BatchImportDialog.showAndImport(tool, null, List.of(fullFsrl), destinationFolder,
 				programManager);
 		}
 		else if (choice == 3) {
@@ -238,6 +249,7 @@ public class ImporterUtilities {
 		}
 
 		try {
+			FileSystemService fsService = FileSystemService.getInstance();
 			ByteProvider provider = fsService.getByteProvider(fsrl, false, monitor);
 			if (provider.length() == 0) {
 				Msg.showWarn(null, null, "Error opening " + fsrl.getName(),
@@ -247,7 +259,7 @@ public class ImporterUtilities {
 			}
 
 			LoaderMap loaderMap = LoaderService.getSupportedLoadSpecs(provider,
-				loader -> loader.supportsLoadIntoProgram(program));
+				loader -> loader.supportsLoadIntoProgram(program), monitor);
 
 			SystemUtilities.runSwingLater(() -> {
 				AddToProgramDialog dialog =
@@ -266,6 +278,58 @@ public class ImporterUtilities {
 	}
 
 	/**
+	 * Constructs a {@link LoadLibrariesOptionsDialog} and shows it in the swing thread. If the 
+	 * given {@link Program} does not support library loading, a warning message will be shown
+	 * instead.
+	 * 
+	 * @param program The {@link Program}
+	 * @param tool The {@link PluginTool}
+	 * @param monitor {@link TaskMonitor}
+	 */
+	public static void showLoadLibrariesDialog(Program program, PluginTool tool,TaskMonitor monitor) {
+
+		Objects.requireNonNull(monitor);
+
+		// Don't allow Load Libraries while "things are happening" to the program
+		if (!program.canLock()) {
+			Msg.showWarn(null, null, LoadLibrariesOptionsDialog.TITLE,
+				"Cannot Load Libraries while program is locked.  Please wait or stop running tasks.");
+			return;
+		}
+
+		try {
+			ByteProvider provider = getProvider(program);
+			if (provider == null) {
+				Msg.showWarn(null, null, LoadLibrariesOptionsDialog.TITLE,
+					"Cannot Load Libraries. Program does not have file bytes associated with it.");
+				return;
+			}
+			LoadSpec loadSpec = getLoadSpec(provider, program, monitor);
+			if (loadSpec == null || loadSpec.getLoader()
+					.getDefaultOptions(provider, loadSpec, null, false, false)
+					.stream()
+					.noneMatch(e -> e.getName()
+							.equals(
+								AbstractLibrarySupportLoader.LOAD_ONLY_LIBRARIES_OPTION_NAME))) {
+				Msg.showWarn(null, null, LoadLibrariesOptionsDialog.TITLE,
+					"Cannot Load Libraries. Program does not support library loading.");
+				return;
+			}
+			AddressFactory addressFactory =
+				loadSpec.getLanguageCompilerSpec().getLanguage().getAddressFactory();
+
+			SystemUtilities.runSwingLater(() -> {
+				OptionsDialog dialog = new LoadLibrariesOptionsDialog(provider, program, tool,
+					loadSpec, () -> addressFactory);
+				tool.showDialog(dialog);
+			});
+		}
+		catch (LanguageNotFoundException e) {
+			Msg.showError(null, null, LoadLibrariesOptionsDialog.TITLE, "Language not found.", e);
+		}
+	}
+
+	/**
 	 * Constructs a {@link ImporterDialog} and shows it in the swing thread.
 	 * 
 	 *
@@ -276,14 +340,16 @@ public class ImporterUtilities {
 	 * 			to the destination filename
 	 * @param tool the parent UI component
 	 * @param programManager optional {@link ProgramManager} instance to open the imported file in
+	 * @param monitor {@link TaskMonitor}
 	 */
-	private static void importSingleFile(FSRL fsrl, DomainFolder destinationFolder,
+	public static void showImportSingleFileDialog(FSRL fsrl, DomainFolder destinationFolder,
 			String suggestedPath, PluginTool tool, ProgramManager programManager,
 			TaskMonitor monitor) {
 
 		try {
+			FileSystemService fsService = FileSystemService.getInstance();
 			ByteProvider provider = fsService.getByteProvider(fsrl, true, monitor);
-			LoaderMap loaderMap = LoaderService.getAllSupportedLoadSpecs(provider);
+			LoaderMap loaderMap = LoaderService.getAllSupportedLoadSpecs(provider, monitor);
 
 			SystemUtilities.runSwingLater(() -> {
 				ImporterDialog importerDialog = new ImporterDialog(tool, programManager, loaderMap,
@@ -316,20 +382,13 @@ public class ImporterUtilities {
 				Program program =
 					doFSImportHelper((GFileSystemProgramProvider) refdFile.fsRef.getFilesystem(),
 						gfile, destFolder, consumer, monitor);
-				if (program != null) {
-					LoadResults<? extends DomainObject> loadResults = new LoadResults<>(program,
-						program.getName(), destFolder.getPathname());
-					boolean success = false;
-					try {
-						doPostImportProcessing(tool, programManager, fsrl, loadResults, consumer,
-							"", monitor);
-						success = true;
-					}
-					finally {
-						if (!success) {
-							program.release(consumer);
-						}
-					}
+				if (program == null) {
+					return;
+				}
+				try (LoadResults<? extends DomainObject> loadResults =
+					new LoadResults<>(new Loaded<>(program, program.getName(), fsrl,
+						tool.getProject(), destFolder.getPathname(), false, consumer))) {
+					doPostImportProcessing(tool, programManager, loadResults, "", monitor);
 				}
 			}
 			catch (Exception e) {
@@ -375,73 +434,96 @@ public class ImporterUtilities {
 	 * @param tool tool to which popup dialogs should be associated
 	 * @param programManager program manager to open imported file with or null
 	 * @param fsrl import file location
-	 * @param destFolder project destination folder
+	 * @param projectRootPath The project folder path that all imported things will be saved 
+	 *   relative to. If {@code null}, "/" will be used.
+	 * @param mirrorFsLayout True if the filesystem layout should be mirrored when loading;
+	 *   otherwise, false
 	 * @param loadSpec import {@link LoadSpec}
-	 * @param programName program name
+	 * @param importName The import name. Path information that appears at the beginning the name 
+	 *   will be appended to the {@code projectRootPath} during the saving process.
 	 * @param options import options
 	 * @param monitor task monitor
 	 */
 	public static void importSingleFile(PluginTool tool, ProgramManager programManager, FSRL fsrl,
-			DomainFolder destFolder, LoadSpec loadSpec, String programName, List<Option> options,
-			TaskMonitor monitor) {
+			String projectRootPath, boolean mirrorFsLayout, LoadSpec loadSpec, String importName,
+			List<Option> options, TaskMonitor monitor) {
 
 		Objects.requireNonNull(monitor);
 
+		FileSystemService fsService = FileSystemService.getInstance();
+
 		try (ByteProvider bp = fsService.getByteProvider(fsrl, false, monitor)) {
-
-			Object consumer = new Object();
 			MessageLog messageLog = new MessageLog();
-			LoadResults<? extends DomainObject> loadResults = loadSpec.getLoader()
-					.load(bp, programName, tool.getProject(), destFolder.getPathname(), loadSpec,
-						options, messageLog, consumer, monitor);
 
-			loadResults.save(tool.getProject(), consumer, messageLog, monitor);
+			ImporterSettings settings = new ImporterSettings(bp, importName, tool.getProject(),
+				projectRootPath, mirrorFsLayout, loadSpec, options, new Object(), messageLog,
+				monitor);
 
-			doPostImportProcessing(tool, programManager, fsrl, loadResults, consumer,
-				messageLog.toString(), monitor);
+			try (LoadResults<? extends DomainObject> loadResults =
+				loadSpec.getLoader().load(settings)) {
+				loadResults.save(monitor);
+				doPostImportProcessing(tool, programManager, loadResults, messageLog.toString(),
+					monitor);
+			}
+
 		}
 		catch (CancelledException e) {
 			// no need to show a message
 		}
 		catch (Exception e) {
+			Throwable cause = e.getCause() != null ? e.getCause() : e;
 			Msg.showError(ImporterUtilities.class, tool.getActiveWindow(), "Error Importing File",
-				"Error importing file: " + fsrl.getName(), e);
+				"Error importing file: %s (%s)".formatted(fsrl.getName(), cause.getMessage()),
+				cause);
 		}
 	}
 
 	private static Set<DomainFile> doPostImportProcessing(PluginTool pluginTool,
-			ProgramManager programManager, FSRL fsrl,
-			LoadResults<? extends DomainObject> loadResults, Object consumer, String importMessages,
-			TaskMonitor monitor) throws CancelledException {
+			ProgramManager programManager, LoadResults<? extends DomainObject> loadResults,
+			String importMessages, TaskMonitor monitor) throws CancelledException {
 
-		boolean firstProgram = true;
+		boolean firstFile = true;
 		Set<DomainFile> importedFilesSet = new HashSet<>();
 		for (Loaded<? extends DomainObject> loaded : loadResults) {
 			monitor.checkCancelled();
-
-			if (loaded.getDomainObject() instanceof Program program) {
-				ProgramMappingService.createAssociation(fsrl, program);
-
-				if (programManager != null) {
-					int openState = firstProgram
-							? ProgramManager.OPEN_CURRENT
-							: ProgramManager.OPEN_VISIBLE;
-					programManager.openProgram(program, openState);
+			Object consumer = new Object();
+			DomainObject obj = loaded.getDomainObject(consumer);
+			DomainFile df = obj.getDomainFile();
+			try {
+				if (obj instanceof Program) {
+					if (programManager != null) {
+						int openState = firstFile
+								? ProgramManager.OPEN_CURRENT
+								: ProgramManager.OPEN_VISIBLE;
+						programManager.openProgram((Program) obj, openState);
+					}
 				}
-				importedFilesSet.add(program.getDomainFile());
-			}
-			if (firstProgram) {
-				// currently we only show results for the imported program, not any libraries
-				displayResults(pluginTool, loaded.getDomainObject(),
-					loaded.getDomainObject().getDomainFile(), importMessages);
-
-				// Optionally echo loader message log to application.log
-				if (!Loader.loggingDisabled && !importMessages.isEmpty()) {
-					Msg.info(ImporterUtilities.class, "Additional info:\n" + importMessages);
+				else {
+					// We imported a non-Program (i.e., a Trace or similar).
+					// Try to open it in the current tool (if not FrontEndTool).
+					if (!(pluginTool instanceof FrontEndTool)) {
+						boolean success = pluginTool.acceptDomainFiles(new DomainFile[] { df });
+						if (!success) {
+							importMessages = "Saved " + df +
+								", but failed to open it in the current tool.\n" + importMessages;
+						}
+					}
 				}
+				if (firstFile) {
+					// currently we only show results for the imported program, not any libraries
+					displayResults(pluginTool, obj, importMessages);
+
+					// Optionally echo loader message log to application.log
+					if (!Loader.loggingDisabled && !importMessages.isEmpty()) {
+						Msg.info(ImporterUtilities.class, "Additional info:\n" + importMessages);
+					}
+				}
+				firstFile = false;
+				importedFilesSet.add(df);
 			}
-			loaded.release(consumer);
-			firstProgram = false;
+			finally {
+				obj.release(consumer);
+			}
 		}
 
 		selectFiles(importedFilesSet);
@@ -456,19 +538,27 @@ public class ImporterUtilities {
 	}
 
 	public static void addContentToProgram(PluginTool tool, Program program, FSRL fsrl,
-			LoadSpec loadSpec, List<Option> options, TaskMonitor monitor) {
+			LoadSpec loadSpec, List<Option> options, boolean analyze, TaskMonitor monitor) {
 
 		Objects.requireNonNull(monitor);
 
+		FileSystemService fsService = FileSystemService.getInstance();
 		MessageLog messageLog = new MessageLog();
+		Object consumer = new Object();
+		program.addConsumer(consumer);
 		try (ByteProvider bp = fsService.getByteProvider(fsrl, false, monitor)) {
-			loadSpec.getLoader().loadInto(bp, loadSpec, options, messageLog, program, monitor);
-			displayResults(tool, program, program.getDomainFile(), messageLog.toString());
+			ImporterSettings settings = new ImporterSettings(bp, bp.getName(), tool.getProject(),
+				program.getDomainFile().getPathname(), false, loadSpec, options, consumer,
+				messageLog, monitor);
+			loadSpec.getLoader().loadInto(program, settings);
+			displayResults(tool, program, messageLog.toString());
 
 			// Optionally echo loader message log to application.log
 			if (!Loader.loggingDisabled && messageLog.hasMessages()) {
 				Msg.info(ImporterUtilities.class, "Additional info:\n" + messageLog.toString());
 			}
+
+			tool.firePluginEvent(new ProgramAddedToPluginEvent("Add To Program", program, analyze));
 		}
 		catch (CancelledException e) {
 			return;
@@ -477,21 +567,108 @@ public class ImporterUtilities {
 			Msg.showError(ImporterUtilities.class, null, "Error Importing File",
 				"Error importing file " + fsrl.getName(), e);
 		}
-
-	}
-
-	private static void displayResults(PluginTool tool, DomainObject obj, DomainFile df,
-			String info) {
-
-		DomainFile domainFile = obj.getDomainFile();
-		Map<String, String> metadata = obj.getMetadata();
-		if (df != null) {
-			domainFile = df;
-			metadata = df.getMetadata();
+		finally {
+			program.release(consumer);
 		}
 
+	}
+
+	private static void displayResults(PluginTool tool, DomainObject obj, String info) {
 		HelpLocation helpLocation = new HelpLocation(GenericHelpTopics.ABOUT, "About_Program");
-		AboutDomainObjectUtils.displayInformation(tool, domainFile, metadata,
+		AboutDomainObjectUtils.displayInformation(tool, obj.getDomainFile(), obj.getMetadata(),
 			"Import Results Summary", info, helpLocation);
 	}
+
+	/**
+	 * Gets a {@link ByteProvider} based on the {@link FileBytes} of the given {@link Program}.
+	 * <p>
+	 * NOTE: If the {@link Program} has more than one {@link FileBytes} associated with it, the
+	 * first one is used (this is typically the bytes of the originally imported file).
+	 * 
+	 * @param program The {@link Program}
+	 * @return A {@link ByteProvider} based on the {@link FileBytes} of the given {@link Program},
+	 *   or null if the {@link Program} doesn't have an associated {@link FileBytes}
+	 */
+	static ByteProvider getProvider(Program program) {
+		List<FileBytes> allFileBytes = program.getMemory().getAllFileBytes();
+		return !allFileBytes.isEmpty() ? new FileBytesProvider(allFileBytes.get(0)) : null;
+	}
+
+	/**
+	 * Get's the {@link LoadSpec} that was used to import the given {@link Program}
+	 * 
+	 * @param provider The original bytes of the {@link Program}
+	 * @param program The {@link Program}
+	 * @param monitor The {@link TaskMonitor}
+	 * @return The {@link LoadSpec} that was used to import the given {@link Program}, or null if
+	 *   it could not be determined
+	 */
+	static LoadSpec getLoadSpec(ByteProvider provider, Program program, TaskMonitor monitor) {
+		LoaderMap loaderMap = LoaderService.getSupportedLoadSpecs(provider,
+			loader -> loader.getName().equalsIgnoreCase(program.getExecutableFormat()), monitor);
+
+		if (loaderMap.isEmpty()) {
+			return null;
+		}
+
+		Loader loader = loaderMap.firstKey();
+		if (loader == null) {
+			return null;
+		}
+
+		LanguageCompilerSpecPair programLcs = program.getLanguageCompilerSpecPair();
+		return loaderMap.get(loader)
+				.stream()
+				.filter(e -> programLcs.equals(e.getLanguageCompilerSpec()))
+				.findFirst()
+				.orElse(null);
+	}
+	
+	/**
+	 * Get's the {@link LoadSpec} that was used to import the given {@link Program}
+	 * 
+	 * @param program The {@link Program}
+	 * @param monitor The {@link TaskMonitor}
+	 * @return The {@link LoadSpec} that was used to import the given {@link Program}, or null if
+	 *   it could not be determined
+	 */
+	public static LoadSpec getLoadSpec(Program program, TaskMonitor monitor) {
+		ByteProvider provider;
+		if (program == null || (provider = getProvider(program)) == null) {
+			return null;
+		}
+		return getLoadSpec(provider, program, monitor);
+	}
+	
+	private static boolean ensureFileImportable(RefdFile refdFile, TaskMonitor monitor) {
+		GFile f = refdFile.file;
+		GFileSystem fs = refdFile.fsRef.getFilesystem();
+
+		monitor.initialize(0);
+		monitor.setMessage("Testing file access: " + f.getName());
+		try (ByteProvider bp = fs.getByteProvider(f, monitor)) {
+			if (bp.length() == 0) {
+				Msg.showError(ImporterUtilities.class, null, "File is empty",
+					"File %s is empty, nothing to import".formatted(f.getPath()));
+				return false;
+			}
+			return true;
+		}
+		catch (CryptoException e) {
+			Msg.showError(ImporterUtilities.class, null, "Crypto / Password Error",
+				"Unable to access the specified file.\n" +
+					"This could be caused by not entering the correct password or " +
+					"because of missing crypto information.\n\n" + e.getMessage());
+			return false;
+		}
+		catch (IOException e) {
+			Msg.showError(ImporterUtilities.class, null, "File IO Error",
+				"Unable to access the specified file.\n\n" + e.getMessage());
+			return false;
+		}
+		catch (CancelledException e) {
+			return false;
+		}
+	}
+
 }
