@@ -4,9 +4,9 @@
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
  * You may obtain a copy of the License at
- * 
+ *
  *      http://www.apache.org/licenses/LICENSE-2.0
- * 
+ *
  * Unless required by applicable law or agreed to in writing, software
  * distributed under the License is distributed on an "AS IS" BASIS,
  * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
@@ -16,6 +16,7 @@
 package help.screenshot;
 
 import java.awt.*;
+import java.net.URI;
 import java.net.URL;
 
 import javax.swing.JLabel;
@@ -112,7 +113,9 @@ public class ShowInstructionInfoPluginScreenShots extends GhidraScreenShotGenera
 
 		performAction("Show Instruction Info", plugin.getName(), true);
 
-		captureProviderWindow("Instruction Info", 1200, 500);
+		ComponentProvider provider =
+			tool.getWindowManager().getComponentProvider("Instruction Info");
+		captureIsolatedProvider(provider, 1200, 510);
 
 //		finished("ShowInstructionInfoPlugin", "ShowInstructionInfo.png");
 	}
@@ -120,8 +123,8 @@ public class ShowInstructionInfoPluginScreenShots extends GhidraScreenShotGenera
 	@Test
 	public void testUnableToLaunch() throws Exception {
 
-		URL url1 = new URL("http://localhost:11046/1234567//pentium.pdf#page=701");
-		URL url2 = new URL("file:/Ghidra/docs/manuals/pentium.pdf#page=701");
+		URL url1 = new URI("http://localhost:11046/1234567//pentium.pdf#page=701").toURL();
+		URL url2 = new URI("file:/Ghidra/docs/manuals/pentium.pdf#page=701").toURL();
 		final LaunchErrorDialog dialog = new LaunchErrorDialog(url1, url2);
 
 		runSwing(() -> dialog.setVisible(true), false);
